--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-intersection-observer": "^9.13.1",
     "react-scroll": "^1.9.0",
     "sass": "^1.79.4",
     "zod": "^3.23.8"
